--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
   <head>
@@ -8,7 +7,6 @@
     <title>فیش‌کافه</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css">
-    <script type="module" src="https://cdn.jsdelivr.net/npm/idb@7/build/umd.js"></script>
     <style>
       body {
         font-family: 'Vazirmatn', sans-serif;
@@ -34,10 +32,11 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react": "https://cdn.jsdelivr.net/npm/react@18.2.0/+esm",
+    "react-dom/client": "https://cdn.jsdelivr.net/npm/react-dom@18.2.0/client/+esm",
+    "idb": "https://cdn.jsdelivr.net/npm/idb@7.1.1/+esm",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "idb": "https://aistudiocdn.com/idb@^8.0.3"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/"
   }
 }
 </script>
